== 0.2.0

* Enhancements
  * Evaluations have been added to track:
    * Administration Types:
      * Emblettas
      * Lab PSGs
      * Run-Ins
    * Evaluation Type:
      * Screening
      * Final Visit
  * Visits have been added
    * Visit Type
    * Visit Outcome
    * Visit Date
  * Patients can now be identified using study codes or MRNs
  * Phone Calls Updated
    * Phone Call Type
      * Screening
      * [2,4,6,8,10,12]-month
      * Unscheduled
    * Phone Direction
      * Incoming, Outgoing

== 0.1.0

* Enhancements
  * Prescreen management
    * Inline editing of eligibility, risk factors, and exclusion criteria
    * Bulk import from tab-delimited spreadsheets automatically filtered
      * By customized age range
      * By white- or black-listed doctors and clinics
  * Patient Study Management
    * Calls made to ascertain study eligibility
    * Mailings sent and received
  * Reporting
    * Patient-Event model stored as star schema for easier reporting and extensibility
    * Simple Site Overview with basic statistics on number of prescreens, calls, and mailings
  * Security
    * PHI separated from study management data and accessible only by screeners entering the data
    * Patient list is masked and only accessible by the screener
    * Patient-Event joins use internal ID, references to patient model use de-identified and scrambled id

== 0.0.0

* Skeleton files to initialize Rails application with testing framework and continuous integration