@@ -23,7 +23,7 @@
   <% @calls.each do |call| %>
     <tr>
       <td><%= link_to call.patient.code, call.patient if call.patient %></td>
-      <td><%= call.response %></td>
+      <td><%= call.response_name %></td>
       <td><%= link_to simple_time(call.call_time), call %></td>
       <td><%= call.berlin %></td>
       <td><%= call.ess %></td>
