@@ -55,7 +55,7 @@
 
     <div class="field">
       <%= f.label :response %><br />
-      <%= f.text_field :response %>
+      <%= f.select :response, [['---', nil]] + Choice.where(category: 'call response').collect{|c| [c.name, c.id]} %>
     </div>
 
     <div class="field">
