@@ -17,7 +17,7 @@
 
   <p>
     <b>Response:</b>
-    <%= @call.response %>
+    <%= @call.response_name %>
   </p>
 
   <p>
